src/objects/OrderApi__Connection__c.object
<CustomObject>
    <description>Connections allow you to relate one Contact or Account to other Contacts and Accounts in the database.</description>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account related to the Connection. (Required if Contact is not populated)</description>
        <inlineHelpText>The Account related to the Connection. (Required if Contact is not populated)</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (Account)</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Category__c</fullName>
        <description>**System Calculated** The Category of the related Connection Type.</description>
        <formula>TEXT(OrderApi__Connection_Type__r.OrderApi__Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** The Category of the related Connection Type.</inlineHelpText>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Connected_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connected Account of the Connection. (Required if Connected Contact not populated)</description>
        <inlineHelpText>Connected Account of the Connection. (Required if Connected Contact not populated)</inlineHelpText>
        <label>Connected Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (Connected Account)</relationshipLabel>
        <relationshipName>Connections2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Connected_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connected Contact of the Connection. (Required if Connected Account not populated)</description>
        <inlineHelpText>Connected Contact of the Connection. (Required if Connected Account not populated)</inlineHelpText>
        <label>Connected Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships (Connected Contact)</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Connected_To__c</fullName>
        <description>**System Calculated** Link to either the Connected Contact or the Connected Account for the Connection.</description>
        <formula>IF(NOT(ISBLANK(OrderApi__Connected_Contact__c)),HYPERLINK(&quot;/&quot; &amp; OrderApi__Connected_Contact__c, OrderApi__Connected_Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Connected_Contact__r.LastName, &quot;_tab&quot;),HYPERLINK(&quot;/&quot; &amp; OrderApi__Connected_Account__c, OrderApi__Connected_Account__r.Name, &quot;_tab&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Link to either the Connected Contact or the Connected Account for the Connection.</inlineHelpText>
        <label>Connected To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Connection_Type2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** Connection Type for the Connected Entity.</description>
        <inlineHelpText>**Required** Connection Type for the Connected Entity.</inlineHelpText>
        <label>Connection Type</label>
        <referenceTo>OrderApi__Connection_Type__c</referenceTo>
        <relationshipLabel>Relationships (Connection Type)</relationshipLabel>
        <relationshipName>Connections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Connection_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** Connection Type for the Primary Entity.</description>
        <inlineHelpText>**Required** Connection Type for the Primary Entity.</inlineHelpText>
        <label>Connection Type</label>
        <referenceTo>OrderApi__Connection_Type__c</referenceTo>
        <relationshipLabel>Relationships (Connection Type)</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact related to the Connection. (Required if Account is not populated)</description>
        <inlineHelpText>The Contact related to the Connection. (Required if Account is not populated)</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships (Contact)</relationshipLabel>
        <relationshipName>Connections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>Additional information/notes about the Connection.</description>
        <inlineHelpText>Additional information/notes about the Connection.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__End_Date__c</fullName>
        <description>The date the Connection was terminated.</description>
        <inlineHelpText>The date the Connection was terminated.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Start_Date__c</fullName>
        <description>**Required** The date the Connection was established.</description>
        <inlineHelpText>**Required** The date the Connection was established.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__System_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Field** Do not manually update/override. Automatically checked when the Connection was created by a trigger as the result of a new Connection inserted into the database.</description>
        <inlineHelpText>**System Field** Do not manually update/override. Automatically checked when the Connection was created by a trigger as the result of a new Connection inserted into the database.</inlineHelpText>
        <label>System Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Termination_Reason__c</fullName>
        <description>Reason for terminating the connection.</description>
        <inlineHelpText>Reason for terminating the connection.</inlineHelpText>
        <label>Termination Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Connection</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Connections ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>